--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -8,7 +8,7 @@
 }
 
 .flex1 {
-  flex: 1.5;
+  flex: 2;
 }
 
 .flex3 {
@@ -17,4 +17,11 @@
 
 .flex6 {
   flex: 6;
+}
+
+.height {
+  height: calc(100vh - 70px);
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
